<resources>
    <string name="app_name">Everything SA</string>
    <string name="action_settings">Settings</string>
    <string name="add_event_title">Add Event</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="welcome_message">Welcome, Kyle</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="events_title">Events</string>
    <string name="nightlife_title">Night Life</string>
    <string name="deals_title">Deals</string>
    <string name="shopping_title">Shopping</string>
    <string name="eatingout_title">Eating Out</string>
    <string name="stay_here_title">Stay Here</string>
    <string name="title_activity_events_list">EventsListActivity</string>
    <string name="title_activity_add_event">Add New Event</string>
    <string name="title_activity_events">Events</string>
</resources>
